# sandbox

./: .gitignore  AcmIcpcTeam.hs  Algs.hs  AlternatingCharacters.hs  FillingJars.hs  FillingJarsEz.hs  FillingJarsLA.hs  FillingJarsVect.hs  FindDigits.hs  GameOfThrones1.hs  IsFibo.hs  LICENSE  LoveLetterMystery.hs  Makefile  MaximizingXOR.hs  README.md  Utils.hs  UtopianTree.hs  build.sbt  filljars  nseq  sandbox.cabal  utopia.hs
agda/: HoleFilling.agda  IPL.agda  Peano.agda
benchmark/src/main/scala/misc/benchmarks/: DigitsBenchmark.scala  IsEvenBenchmark.scala
combinatorics/: Handshake.hs
core/src/main/haskell/Sandbox/: Util.hs
core/src/main/haskell/Sandbox/Util/: IO.hs
core/src/main/haskell/Util/: IO.hs
core/src/main/scala/misc/euler/: package.scala
core/src/main/scala/misc/examples/: Typeclass.scala
data/: Divisibility-input03.txt  Divisibility-input_0.txt  Divisibility-output03.txt  Knapsack-input02.txt  Knapsack-output02.txt
data/hackerrank/: Divisibility-input_1.txt  FillingJars-input10000.txt
enso/Statistics/src/: Main.enso
enso/Statistics/src/Number/: Extensions.enso
hackerrank/rust/algorithms/warmup/filpping-bits/: Cargo.toml
hackerrank/rust/algorithms/warmup/filpping-bits/src/: main.rs
hackerrank/src/main/go/algorithms/dynamic-programming/: longest-increasing-subsequence.go
hackerrank/src/main/go/algorithms/dynamic-programming/longest-common-subsequence/: longest-common-subsequence.go
hackerrank/src/main/go/algorithms/dynamic-programming/longest-increasing-subsequence/: longest-increasing-subsequence.go
hackerrank/src/main/go/utils/: io.go
hackerrank/src/main/haskell/algorithms/ad-hoc/: Divisibility.hs
hackerrank/src/main/haskell/algorithms/combinatorics/: ConnectingTowns.hs  Handshake.hs
hackerrank/src/main/haskell/algorithms/data-structures/: Divisibility.hs
hackerrank/src/main/haskell/algorithms/dynamic-programming/: Knapsack.hs  MaximumSubarray.hs
hackerrank/src/main/haskell/algorithms/graph-theory/: EvenTree.hs
hackerrank/src/main/haskell/algorithms/sorting/: InsertionSortPart1.hs  intro.hs
hackerrank/src/main/haskell/algorithms/warmup/: AcmIcpcTeam.hs  AlternatingCharacters.hs  AngryChildren.hs  FillingJars.hs  FillingJarsEz.hs  FillingJarsLA.hs  FillingJarsVect.hs  FindDigits.hs  GameOfThrones1.hs  IsFibo.hs  LoveLetterMystery.hs  MaximizingXOR.hs  UtopianTree.hs
haskell/: LICENSE  README.md  sandbox.cabal
haskell/HackerRank/Algorithms/: AcmIcpcTeam.hs  AlternatingCharacters.hs  AngryChildren.hs  EvenTree.hs  FindDigits.hs  GameOfThrones1.hs  InsertionSortPart1.hs  Knapsack.hs  LoveLetterMystery.hs  MaximizingXOR.hs  MaximumSubarray.hs  UtopianTree.hs
haskell/HackerRank/DataStructures/: Divisibility.hs
haskell/HackerRank/Mathematics/: ConnectingTowns.hs  FillingJars.hs  FillingJarsEz.hs  FillingJarsVect.hs  FindPoint.hs  Handshake.hs  IsFibo.hs  MinimumDraws.hs
haskell/HackerRank/Probability/: BdayGift.hs
haskell/HackerRank/Tutorials/Statistics/: Day0.hs  Day1.hs  Day4.hs  Day5.hs
haskell/Sandbox/: Statistics.hs  Util.hs
haskell/Sandbox/Data/Vector/Unboxed/: Extra.hs
haskell/Sandbox/Number/: Extra.hs
haskell/Sandbox/Util/: IO.hs
haskell/hackerrank/: AcmIcpcTeam.hs  AlternatingCharacters.hs  AngryChildren.hs  BdayGift.hs  ConnectingTowns.hs  Divisibility.hs  EvenTree.hs  FillingJars.hs  FillingJarsEz.hs  FillingJarsLA.hs  FillingJarsVect.hs  FindDigits.hs  FindPoint.hs  GameOfThrones1.hs  Handshake.hs  InsertionSortPart1.hs  IsFibo.hs  Knapsack.hs  LoveLetterMystery.hs  MaximizingXOR.hs  MaximumSubarray.hs  MinimumDraws.hs  UtopianTree.hs
haskell/hackerrank/tutorials/statistics/: Day0.hs  Day1.hs  Day4.hs  Day5.hs
idris/: realpath.idr
project/: plugins.sbt
scala/: build.sbt
scala/core/src/main/scala/misc/euler/: problem5.scala
scala/core/src/main/scala/misc/examples/: Shapeless.scala  chess.scala  chess1.scala  dynamic.scala  hbool.scala  hchess.scala
scala/core/src/main/scala/misc/trees/: trees.scala
scala/project/: plugins.sbt
src/main/haskell/Util/: Alg.hs
src/main/haskell/algorithms/combinatorics/: ConnectingTowns.hs  Handshake.hs  handshakes
src/main/haskell/algorithms/dynamic-programming/: MaximumSubarray.hs
src/main/haskell/algorithms/warmup/: AngryChildren.hs  FillingJars.hs  FillingJarsEz.hs  FillingJarsLA.hs  IsFibo.hs  UtopianTree.hs
src/main/scala/misc/examples/: SO.scala  ndd.scala
src/main/scala/misc/utils/: package.scala
src/test/scala/misc/utils/: NumericUtilsTest.scala
util/: filljars  genseq  handshakes  seqn
(+2 files in other folders)
