cabal-version:       2.2
name:                sandbox
version:             0.2.0.0
synopsis:            miscellaneous programming exercises
-- description:
homepage:            4e6.me
license:             MIT
license-file:        LICENSE
author:              Dmitry Bushev
maintainer:          bushevdv@gmail.com
-- copyright:
build-type:          Simple
-- extra-source-files:

common deps
  ghc-options:         -Wall
  build-depends:       base ^>=4.13
                     , array ^>=0.5.0
                     , bytestring >=0.10 && <0.12
                     , containers ^>=0.6.0
                     , hashable ^>=1.3.0
                     , unordered-containers ^>=0.2.0
                     , vector ^>=0.12.0
  other-modules:
                       HackerRank.Algorithms.AcmIcpcTeam
                     , HackerRank.Algorithms.AlternatingCharacters
                     , HackerRank.Algorithms.AngryChildren
                     , HackerRank.Algorithms.EvenTree
                     , HackerRank.Algorithms.FindDigits
                     , HackerRank.Algorithms.GameOfThrones1
                     , HackerRank.Algorithms.InsertionSortPart1
                     , HackerRank.Algorithms.Knapsack
                     , HackerRank.Algorithms.LoveLetterMystery
                     , HackerRank.Algorithms.MaximizingXOR
                     , HackerRank.Algorithms.MaximumSubarray
                     , HackerRank.Algorithms.UtopianTree
                     , HackerRank.DataStructures.Divisibility
                     , HackerRank.Mathematics.ConnectingTowns
                     , HackerRank.Mathematics.FillingJars
                     , HackerRank.Mathematics.FillingJarsEz
                     , HackerRank.Mathematics.FillingJarsVect
                     , HackerRank.Mathematics.FindPoint
                     , HackerRank.Mathematics.Handshake
                     , HackerRank.Mathematics.IsFibo
                     , HackerRank.Mathematics.MinimumDraws
                     , HackerRank.Probability.BdayGift
                     , Sandbox.Util
                     , Sandbox.Util.IO
  default-language:    Haskell2010
  
library
  import:              deps

executable AcmIcpcTeam
  import:              deps
  main-is:             hackerrank/AcmIcpcTeam.hs

executable AlternatingCharacters
  import:              deps
  main-is:             hackerrank/AlternatingCharacters.hs

executable AngryChildren
  import:              deps
  main-is:             hackerrank/AngryChildren.hs

executable BdayGift
  import:              deps
  main-is:             hackerrank/BdayGift.hs

executable ConnectingTowns
  import:              deps
  main-is:             hackerrank/ConnectingTowns.hs

executable Divisibility
  import:              deps
  main-is:             hackerrank/Divisibility.hs

executable EvenTree
  import:              deps
  main-is:             hackerrank/EvenTree.hs

executable FillingJars
  import:              deps
  main-is:             hackerrank/FillingJars.hs

executable FillingJarsEz
  import:              deps
  main-is:             hackerrank/FillingJarsEz.hs

executable FillingJarsVect
  import:              deps
  main-is:             hackerrank/FillingJarsVect.hs

executable FindDigits
  import:              deps
  main-is:             hackerrank/FindDigits.hs

executable FindPoint
  import:              deps
  main-is:             hackerrank/FindPoint.hs

executable GameOfThrones1
  import:              deps
  main-is:             hackerrank/GameOfThrones1.hs

executable Handshake
  import:              deps
  main-is:             hackerrank/Handshake.hs

executable InsertionSortPart1
  import:              deps
  main-is:             hackerrank/InsertionSortPart1.hs

executable IsFibo
  import:              deps
  main-is:             hackerrank/IsFibo.hs

executable Knapsack
  import:              deps
  main-is:             hackerrank/Knapsack.hs

executable LoveLetterMystery
  import:              deps
  main-is:             hackerrank/LoveLetterMystery.hs

executable MaximizingXOR
  import:              deps
  main-is:             hackerrank/MaximizingXOR.hs

executable MaximumSubarray
  import:              deps
  main-is:             hackerrank/MaximumSubarray.hs

executable MinimumDraws
  import:              deps
  main-is:             hackerrank/MinimumDraws.hs

executable UtopianTree
  import:              deps
  main-is:             hackerrank/UtopianTree.hs
